--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ documentation = "https://docs.dasch.swiss/latest/DSP-TOOLS/"
 homepage = "https://www.dasch.swiss/"
 repository = "https://github.com/dasch-swiss/dsp-tools"
 include = [
-    "src/dsp_tools/resources/*",
-    "src/dsp_tools/py.typed"  # see https://mypy.readthedocs.io/en/stable/installed_packages.html#making-pep-561-compatible-packages
+    "python/dsp_tools/resources/*",
+    "python/dsp_tools/py.typed",    # see https://mypy.readthedocs.io/en/stable/installed_packages.html#making-pep-561-compatible-packages
 ]
 
 
@@ -59,7 +59,7 @@ pytest-sugar = "^0.9.7"
 
 
 [tool.poetry.scripts]
-dsp-tools = "dsp_tools.cli.entry_point:main"  # definition of the CLI entry point
+dsp-tools = "dsp_tools.cli.entry_point:main" # definition of the CLI entry point
 
 
 [tool.poetry-exec-plugin.commands]
@@ -73,7 +73,7 @@ check-links = """
 """
 darglint = """
     find . -name "*.py" \
-    -not -path "./src/dsp_tools/commands/project/models/*" \
+    -not -path "./python/dsp_tools/commands/project/models/*" \
     -not -path "./.git/*" \
     -not -path "./.venv/*" \
     | xargs poetry run darglint -v 2\
@@ -122,26 +122,26 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
 # see https://docs.pytest.org/en/latest/explanation/goodpractices.html#tests-outside-application-code
-pythonpath = [".", "src", "test"]
+pythonpath = [".", "python", "test"]
 
 
 [tool.mypy]
-ignore_missing_imports = true                                 # TODO: deactivate this
+ignore_missing_imports = true # TODO: deactivate this
 show_column_numbers = true
 strict = true
 exclude = [
-    "src/dsp_tools/models/datetimestamp.py",                  # TODO: activate this
-    "src/dsp_tools/models/langstring.py",                     # TODO: activate this
-    "src/dsp_tools/models/projectContext.py",                 # TODO: activate this
-    "src/dsp_tools/commands/project/models/context.py",       # TODO: activate this
-    "src/dsp_tools/commands/project/models/group.py",         # TODO: activate this
-    "src/dsp_tools/commands/project/models/helpers.py",       # TODO: activate this
-    "src/dsp_tools/commands/project/models/listnode.py",      # TODO: activate this
-    "src/dsp_tools/commands/project/models/ontology.py",      # TODO: activate this
-    "src/dsp_tools/commands/project/models/project.py",       # TODO: activate this
-    "src/dsp_tools/commands/project/models/propertyclass.py", # TODO: activate this
-    "src/dsp_tools/commands/project/models/resourceclass.py", # TODO: activate this
-    "src/dsp_tools/commands/project/models/user.py",          # TODO: activate this
+    "python/dsp_tools/models/datetimestamp.py",                  # TODO: activate this
+    "python/dsp_tools/models/langstring.py",                     # TODO: activate this
+    "python/dsp_tools/models/projectContext.py",                 # TODO: activate this
+    "python/dsp_tools/commands/project/models/context.py",       # TODO: activate this
+    "python/dsp_tools/commands/project/models/group.py",         # TODO: activate this
+    "python/dsp_tools/commands/project/models/helpers.py",       # TODO: activate this
+    "python/dsp_tools/commands/project/models/listnode.py",      # TODO: activate this
+    "python/dsp_tools/commands/project/models/ontology.py",      # TODO: activate this
+    "python/dsp_tools/commands/project/models/project.py",       # TODO: activate this
+    "python/dsp_tools/commands/project/models/propertyclass.py", # TODO: activate this
+    "python/dsp_tools/commands/project/models/resourceclass.py", # TODO: activate this
+    "python/dsp_tools/commands/project/models/user.py",          # TODO: activate this
 ]
 
 
@@ -152,56 +152,56 @@ target-version = "py311"
 
 [tool.ruff.lint]
 select = [
-    "RUF",      # ruff-specific rules
-    "PL",       # pylint
-    "I",        # isort
-    "E",        # pycodestyle errors
-    "F",        # pyflakes
-    "A",        # flake8-builtins
-    "BLE",      # flake8-blind-except
-    "ARG",      # flake8-unused-arguments
-    "S",        # flake8-bandit plugin which checks for security issues
-    "YTT",      # flake8-2020 plugin, which checks for misuse of `sys.version` or `sys.version_info`
-    "ASYNC",    # flake8-async plugin, which checks for bad async / asyncio practices
-    "ISC",      # flake8-implicit-str-concat plugin, which checks for problematic string concatenation
-    "INP",      # flake8-no-pep420 plugin, which checks for missing __init__.py files
-    "PIE",      # flake8-pie plugin, which does miscellaneous checks
-    "PT",       # flake8-pytest-style plugin
-    "TID",      # flake8-tidy-imports plugin
-    "ICN",      # flake8-import-conventions plugin, which checks for import conventions
-    "ARG",      # flake8-unused-arguments
-    "PGH",      # pygrep-hooks: A collection of fast, cheap, regex based pre-commit hooks
-    "UP031",    # pyupgrade: printf-string-formatting
-    "D101",     # pydocstyle: undocumented-public-class
-    "D102",     # pydocstyle: undocumented-public-method
-    "D103",     # pydocstyle: undocumented-public-function
-    "D417",     # pydocstyle: undocumented-param
-    "B023",     # flake8-bugbear: function-uses-loop-variable
-    "FIX",      # flake8-fixme: checks for FIXME, TODO, XXX, etc.
+    "RUF",   # ruff-specific rules
+    "PL",    # pylint
+    "I",     # isort
+    "E",     # pycodestyle errors
+    "F",     # pyflakes
+    "A",     # flake8-builtins
+    "BLE",   # flake8-blind-except
+    "ARG",   # flake8-unused-arguments
+    "S",     # flake8-bandit plugin which checks for security issues
+    "YTT",   # flake8-2020 plugin, which checks for misuse of `sys.version` or `sys.version_info`
+    "ASYNC", # flake8-async plugin, which checks for bad async / asyncio practices
+    "ISC",   # flake8-implicit-str-concat plugin, which checks for problematic string concatenation
+    "INP",   # flake8-no-pep420 plugin, which checks for missing __init__.py files
+    "PIE",   # flake8-pie plugin, which does miscellaneous checks
+    "PT",    # flake8-pytest-style plugin
+    "TID",   # flake8-tidy-imports plugin
+    "ICN",   # flake8-import-conventions plugin, which checks for import conventions
+    "ARG",   # flake8-unused-arguments
+    "PGH",   # pygrep-hooks: A collection of fast, cheap, regex based pre-commit hooks
+    "UP031", # pyupgrade: printf-string-formatting
+    "D101",  # pydocstyle: undocumented-public-class
+    "D102",  # pydocstyle: undocumented-public-method
+    "D103",  # pydocstyle: undocumented-public-function
+    "D417",  # pydocstyle: undocumented-param
+    "B023",  # flake8-bugbear: function-uses-loop-variable
+    "FIX",   # flake8-fixme: checks for FIXME, TODO, XXX, etc.
 ]
 ignore = [
-    "ISC001",   # flake8-implicit-str-concat: single-line-implicit-string-concatenation  # incompatible with the formatter
-    "S105",     # flake8-bandit: hardcoded password
-    "S106",     # flake8-bandit: hardcoded password
-    "S603",     # flake8-bandit: subprocess-without-shell-equals-true
-    "S320",     # flake8-bandit: xml parsing vulnerable to XML attacks
+    "ISC001", # flake8-implicit-str-concat: single-line-implicit-string-concatenation  # incompatible with the formatter
+    "S105",   # flake8-bandit: hardcoded password
+    "S106",   # flake8-bandit: hardcoded password
+    "S603",   # flake8-bandit: subprocess-without-shell-equals-true
+    "S320",   # flake8-bandit: xml parsing vulnerable to XML attacks
 ]
 
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = [
-    "F401",     # unused-import
-    "F403",     # undefined-local-with-import-star
-    "PLC0414",  # useless-import-alias
+    "F401",    # unused-import
+    "F403",    # undefined-local-with-import-star
+    "PLC0414", # useless-import-alias
 ]
 "testdata/**" = [
-    "INP001",   # implicit-namespace-package    # there are some python files, but no __init__.py
+    "INP001", # implicit-namespace-package    # there are some python files, but no __init__.py
 ]
 "test/*" = [
-    "D103",     # pydocstyle: undocumented-public-function
-    "D102",     # pydocstyle: undocumented-public-method
-    "D101",     # pydocstyle: undocumented-public-class
-    "S101",     # flake8-bandit: use of assert
+    "D103", # pydocstyle: undocumented-public-function
+    "D102", # pydocstyle: undocumented-public-method
+    "D101", # pydocstyle: undocumented-public-class
+    "S101", # flake8-bandit: use of assert
 ]
 
 
