--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,6 +126,8 @@ build-backend = "maturin"
 [tool.maturin]
 # "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
 features = ["pyo3/extension-module"]
+python-source = "python"
+module-name = "dsp_tools._lib_name"
 
 
 [tool.pytest.ini_options]
